.apex/src/objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Carry Goods</fullName>
                </value>
                <value>
                    <fullName>Children&apos;s Items</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Digital &amp; Physical Games</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Fashion Accessories</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverages</fullName>
                </value>
                <value>
                    <fullName>Footwear</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Home &amp; Living</fullName>
                </value>
                <value>
                    <fullName>Household Appliances</fullName>
                </value>
                <value>
                    <fullName>Interior Design</fullName>
                </value>
                <value>
                    <fullName>Lawn &amp; Garden</fullName>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Luxury Goods</fullName>
                </value>
                <value>
                    <fullName>Outdoor Activities</fullName>
                </value>
                <value>
                    <fullName>Personal Care</fullName>
                </value>
                <value>
                    <fullName>Pet Care</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Timepieces</fullName>
                </value>
                <value>
                    <fullName>Vehicle Accessories</fullName>
                </value>
                <value>
                    <fullName>Visual Media</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>Workplace Essentials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>URL to image</description>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Book</fullName>
                </value>
                <value>
                    <fullName>Clothing</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Game</fullName>
                </value>
                <value>
                    <fullName>Garden</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Home Decor</fullName>
                </value>
                <value>
                    <fullName>Jewelry</fullName>
                </value>
                <value>
                    <fullName>Movie</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Office Supply</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Pet Supply</fullName>
                </value>
                <value>
                    <fullName>Shoe</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
                <value>
                    <fullName>Toy</fullName>
                </value>
                <value>
                    <fullName>Watch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>